syntax = "proto3";

package spine.tools.protoc;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.tools.protoc";
option java_outer_classname = "TestEventsProto";
option java_multiple_files = true;

message ProjectCreated {
    string id = 1;
}

message ProjectStarted {
    string id = 1;
}
